fix remarques soutenance:  banner a propos : suppression ',' erreurs console, ajout fond gris collapses, redirect page erreur si id logement invalide

--- a/src/styles/components/Collapse.scss
+++ b/src/styles/components/Collapse.scss
@@ -33,6 +33,7 @@
         font-size: 18px;
         font-weight: 400;
         line-height: 25px;
+        background-color:#F6F6F673;        
 
         @media screen and (max-width: 480px) {            
             font-size: 12px;
